@@ -30,6 +30,7 @@ munin (work)
   * Plugin: Sort fields in df*-plugins alphabetically.
   * Plugin: Added plugin generic/bind9_rndc, by Facq Laurent.
   * Plugin: Two network ups tool plugins (generic/nut_*) contributed by xavier.
+  * Plugin: Added plugin generic/mhttping by Greg Connor.
 
 munin (1.1.7)
 
